src/test/deca/syntax/invalid/object/class_class_name_class_extends_void.deca
//  Description :
// 
//      Test syntaxiquement incorrect de la déclaration d'une classe avec un extends vide
// 
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class nameClass extends {
    
}